# new-book-physical-ai

./: .gitignore  CLAUDE.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  agent.py  main.py  pyproject.toml  pytest.ini  requirements.txt  retrieving.py  setup.py  start.sh  test_basic_functionality.py  test_end_to_end.py
backend/src/: main.py
backend/src/api/: __init__.py  chat.py  health.py
backend/src/config/: __init__.py  settings.py
backend/src/models/: __init__.py  models.py
backend/src/rag_pipeline/: __init__.py  main.py
backend/src/rag_pipeline/api/: __init__.py  ingestion.py  main.py  models.py  search.py
backend/src/rag_pipeline/config/: settings.py
backend/src/rag_pipeline/embedding/: __init__.py  cohere_client.py
backend/src/rag_pipeline/ingestion/: __init__.py  content_extractor.py  docusaurus_parser.py  url_discovery.py
backend/src/rag_pipeline/models/: chunk.py  embedding.py  pipeline.py
backend/src/rag_pipeline/processing/: __init__.py  chunker.py  text_cleaner.py
backend/src/rag_pipeline/storage/: __init__.py  qdrant_client.py
backend/src/rag_pipeline/utils/: errors.py  logger.py
backend/src/services/: __init__.py  chat_service.py  cohere_service.py  qdrant_service.py  query_validation_service.py  session_service.py
backend/tests/integration/: test_chat_integration.py  test_conversation_integration.py
backend/tests/unit/: test_chat_endpoint.py  test_health_endpoint.py  test_session_service.py
docs/physical-ai/: glossary.mdx  index.mdx  index.module.css
history/adr/: 0001-separate-landing-page-from-textbook-content.md  0002-rag-pipeline-technology-and-architecture.md  0003-rag-content-processing-pipeline-design.md  0004-rag-data-model-and-storage-strategy.md  0005-rag-pipeline-architecture-and-design-decisions.md
src/: Root.jsx
(+276 files in other folders)
